Add 'Lato' font-family to body styles

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!--Stylesheet-->
     <link rel="stylesheet" href="/assets/css/style.css">
-</head>
+ </head>
 <body>
     <!--Header-->
     <header>Header ...</header>
+    <h1>
+        Love Yoga
+    </h1>
     <!--Main Content-->
     <main>Main Content ....</main>
     <!--Footer-->
