--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
  </head>
 <body>
     <!--Header-->
-    <header>Header ...</header>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+            <nav>
+                <ul id="menu">                    
+                    <li><a href="" class="active">Home</a></li>
+                    <li><a href="">Gallery</a></li>
+                    <li><a href="">Sign up</a></li>
+                </ul>  
+            </nav>
+        </a>
+    </header>
     <h1>
         Love Yoga
     </h1>
