--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
@@ -41,8 +41,11 @@
 
     <!-- Footer -->
     <footer>
-           <ul>
+           <ul class="horizontal-list">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Visit our twitter page (opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our utube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://instagram.com/" target="_blank" rel="noopener" aria-label="Visit our instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
            </ul> 
 
     </footer>
