Style footer icons for all screen sizes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- Footer -->
     <footer>
-           <ul class="horizontal-list">
+           <ul id="social-networks">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Visit our twitter page (opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our utube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
